--- a/server/package.json
+++ b/server/package.json
@@ -1,36 +1,25 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "^4.10.1",
-    "Compression": "^0.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "helmet": "^6.0.1",
-    "http-errors": "^2.0.0",
-    "morgan": "^1.10.0"
+    "dev": "nodemon src/app.ts"
   },
   "devDependencies": {
-    "@decorators/express": "^2.9.1",
-    "@types/express": "^4.17.17",
-    "@types/helmet": "^4.0.0",
-    "@types/http-errors": "^2.0.1",
-    "@types/morgan": "^1.9.4",
-    "@types/node": "^18.13.0",
-    "class-validator": "^0.14.0",
-    "jest": "^29.4.3",
+    "@types/node": "^18.14.0",
     "nodemon": "^2.0.20",
-    "reflect-metadata": "^0.1.13",
-    "typedi": "^0.10.0",
+    "ts-node": "^10.9.1",
+    "tsc": "^2.0.4",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@fastify/jwt": "^6.5.0",
+    "@prisma/client": "^4.10.1",
+    "fastify": "^4.13.0",
+    "fastify-zod": "^1.2.0",
+    "prisma": "^4.10.1",
+    "zod": "^3.20.6",
+    "zod-to-json-schema": "^3.20.4"
   }
 }
