--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon src/app.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.14.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
@@ -16,6 +17,7 @@
   "dependencies": {
     "@fastify/jwt": "^6.5.0",
     "@prisma/client": "^4.10.1",
+    "bcrypt": "^5.1.0",
     "fastify": "^4.13.0",
     "fastify-zod": "^1.2.0",
     "prisma": "^4.10.1",
