--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.14.0",
+    "@types/nodemailer": "^6.4.7",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
@@ -19,6 +20,7 @@
     "@prisma/client": "^4.10.1",
     "bcrypt": "^5.1.0",
     "fastify": "^4.13.0",
+    "nodemailer": "^6.9.1",
     "prisma": "^4.10.1",
     "zod": "^3.20.6",
     "zod-to-json-schema": "^3.20.4"
